<resources>
    <string name="app_name">Pet Planner</string>
    <string name="button33">Button</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="select_specie">Select Specie</string>
    <string name="select_breed">Select breed</string>
    <string name="select_age">Select Age</string>
    <string name="pet_diet_plan">Pet Diet Plan</string>
    <string name="generate_diet_plan">Generate Plan</string>
    <string name="dietpln">dietpln</string>
    <string name="favourite_food">favourite food</string>
    <string name="save">save</string>
    <string name="do_not_have_an_account_click_here">Do not Have an account? Click Here</string>
    <string name="have_an_account_click_here">Have an account? Click here</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="Select_plan">Select Plan</string>
    <string name="view_profile">View Pet Profile</string>
    <string-array name="specie">
        <item>--select pet specie--</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Parrot</item>
        <item>Hen/Chicken</item>
        <item>Fish</item>
    </string-array>

    <string-array name="breed">
        <item>--select pet breed--</item>
        <item>Dog:Husky </item>
        <item>Dog:German Shepered </item>
        <item>Cat:Persian</item>
        <item>Cat:Siamese</item>
        <item>Cat:American Long hair</item>
        <item>Hen:Boiler</item>
        <item>Hen:Non Boiler</item>
        <item>Parrot:(any breed)</item>
        <item>Fish:(any breed)</item>
    </string-array>
    <string-array name="age">
        <item>--select age--</item>
        <item>Small</item>
        <item>Adult</item>
        <item>Senior Adult</item>
    </string-array>

    <string-array name="plan">
        <item>--select plan--</item>
        <item>Weekly Plan </item>
        <item>Daily Plan </item>
    </string-array>

    <string-array name="foodtimings">
        <item>--select food timings--</item>
        <item>2times in day</item>
        <item>3times in day</item>
        <item>4times in day</item>
        <item>5times in day</item>
        <item>6times in day</item>
    </string-array>


    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="www_petplanner_com_pk">www.petplanner.com.pk</string>
    <string name="diseases_and_suggestions">Diseases Detail</string>
    <string name="notification_detail">Notification Detail</string>
    <string name="Appoint">Appoint</string>
    <string name="love_your_pets">love your pets</string>
    <string name="pet_planner">Pet Planner</string>
    <string name="signout">Signout</string>
    <string name="button">button</string>
    <string name="pet_profile">Add Pet Profile</string>
    <string name="textview">TextView</string>
    <string name="download">Download</string>
    <string name="specie">Specie</string>
    <string name="done">DONE</string>
    <string name="capture_upload">Capture/Upload</string>
    <string name="button_upload_img">Button</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_pet_specie">Enter pet specie</string>
    <string name="enter_pet_name">Enter pet name</string>
    <string name="enter_favourite_food">Enter Favourite Food</string>
    <string name="view_all_data">View All Data</string>
    <string name="browse_image">Browse Image</string>
    <string name="upload_data">Upload Data</string>
    <string name="enter_pet_breed">Enter pet breed</string>
    <string name="enter_pet_age">Enter pet age</string>
    <string name="enter_food_timings">Enter Food Timings</string>
    <string name="name_here">Name here</string>
    <string name="pet_name_here">Pet Name here</string>
    <string name="email_here">Email here</string>
    <string name="pet_specie_here">Pet Specie here</string>
    <string name="pet_brred_here">Pet Brred here</string>
    <string name="pet_food_timings_here">Pet Food Timings here</string>
    <string name="pet_favourite_food_here">Pet Favourite Food here</string>
    <string name="pet_age_here">Pet Age here</string>
    <string name="cancel_button">Button</string>
    <string name="Cancel">Cancel</string>
    <string name="dr_umair_ahmed">Dr.Umair_Ahmed</string>
    <string name="veterinary_surgeon">Veterinary Surgeon</string>
    <string name="ummmaair_gmail_com">ummmaair@gmail.com</string>
    <string name="_923330547046">+923330547046</string>
    <string name="dr_muhammad_imran">Dr Muhammad Imran</string>
    <string name="veterinary_microbiologist">Veterinary Microbiologist</string>
    <string name="imran_gmail_com">imran@gmail.com</string>
    <string name="_923336281437">+923336281437</string>
    <string name="appointment">Appointment</string>
    <string name="microbiologist">microbiologist</string>
    <string name="todo">TODO</string>
    <string name="bckimge">bckimge</string>
    <string name="title_activity_spinner">Spinner</string>

</resources>
